samples/_failures_safe/1761403441_8f1b9c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_714ebcf0.c: In function ‘main’:
./samples/SAFE/__tmp_714ebcf0.c:147:19: error: expected ‘;’ at end of input
  147 |     graph_add_edge
      |                   ^
      |                   ;
./samples/SAFE/__tmp_714ebcf0.c:147:5: error: expected declaration or statement at end of input
  147 |     graph_add_edge
      |     ^~~~~~~~~~~~~~
